--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
+.App {
+  padding: 10px;
+}
+
 .card-list {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .VideoCard {
   border:  1px solid;
   padding: 10px;
+  margin-bottom: 3px;
   min-height: 200px;
 }
